--- a/src/pages/homeStyle.css
+++ b/src/pages/homeStyle.css
@@ -1,25 +1,25 @@
 label{
     font-weight: 700;
-    @media(max-width:767px){
+    /* @media(max-width:767px){
        font-size:8px;
        font-weight: 600;
-    }
+    } */
 }
 small{
     font-weight: 700;
-    @media(max-width:767px){
+    /* @media(max-width:767px){
         font-size:5px;
         font-weight: 600;
-     }
+     } */
 }
 input.chk-box{
     width: 30px;
     height: 30px;
     margin-block: auto;
-    @media(max-width:767px){
+    /* @media(max-width:767px){
         width: 10px;
         height: 10px;
-     }
+     } */
 }
 input[type=text]{
     font-size: 18px;
@@ -92,6 +92,9 @@ textarea{
     align-items: center;
     justify-content: center;
 }
+
+
+
 .main-file{
     display: flex;
     flex-direction: column;
@@ -99,24 +102,30 @@ textarea{
     height: 1540px;
     /* height: 100%; */
     width: 1136px;
+    max-width: 1136px;
     padding-bottom:2rem;
     margin-bottom: 4rem;
+    margin-inline: auto;
     /* @media(max-width:767px){
         width: 100%;
-        margin-left:10rem ;
-        
+        height: 1040px;
+        padding:0rem;
+        margin-bottom: 0rem;
     } */
 }
 
 .table{
-    width: 1000px;
-    height: 1010px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1050px;
+    height: 1510px;
     margin-inline: auto;
     margin-top:1rem;
+    border: 1px solid darkgoldenrod;
     /* @media(max-width:767px){
         width: 80%;
-        margin-left:11rem;
-        height: 1010px;
+        height: 650px;
     } */
 }
 
@@ -125,8 +134,8 @@ textarea{
     width: 100%;
     height: 42px;
     background-color: white;
-    border: 1px solid;
-    border-color: darkgoldenrod;
+    border: 1px solid darkgoldenrod;
+   
 }
 
 .fr-column-one{
@@ -451,10 +460,10 @@ textarea{
     font-size: 14px;
     width: 30%;
     line-break:auto ;
-    @media(max-width:767px){
+    /* @media(max-width:767px){
         font-size:8px;
         font-weight: 600;
-     }
+     } */
 }
 .row-bottom-c2-r1-txt-date{
     width: 8%;
@@ -467,7 +476,9 @@ textarea{
     top: 0;
 }
 
+.img-logo{
+    width: 250px;
+    display: flex;
 
-
-
+}
 
