--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,27 @@ code {
     monospace;
 }
 
+.app{
+  display: flex;
+}
+.app-main{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  min-height: 100vh;
+  overflow-x: hidden;
+  position: relative;
+  overflow: auto;
+}
+
+.colored-toast.swal2-icon-success {
+  background-color: #a5dc86 !important;
+}
+.appmain-loading{
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
